layout basic page structure

--- a/index.html
+++ b/index.html
@@ -7,20 +7,49 @@
     <link rel="stylesheet" href="styles.css">
   </head>
 <body>
-  <header>
-    <div class="header-top">
-      <p class="search-bar">search bar</p>
-      <p class="notification">notification icon</p>
-      <p class="profile-image">user avatar</p>
-      <p class="user-name">user name</p>
+  <div class="container">
+    <header>
+      <div class="header-top">
+        <div class="header-top-1">
+          <p class="search-bar">search bar</p>
+        </div>
+        <div class="header-top-2">
+          <p class="notification">notification icon</p>
+          <p class="profile-image">user avatar</p>
+          <p class="user-name">user name</p>
+        </div>
+      </div>
+      <div class="header-bottom">
+        <div class="header-bottom-1">
+          <p>user image</p>
+          <p>user name</p>
+        </div>
+        <div class="header-bottom-2">
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
+        </div>
+      </div>
+    </header>
+    <div class="sidebar">
+      <h2>Dashboard</h2>
+        <ul class="sidebar-1">
+          <li>Home</li>
+          <li>Profile</li>
+          <li>Messages</li>
+          <li>History</li>
+          <li>Tasks</li>
+          <li>Communities</li>
+        </ul>
+        <ul class="sidebar-2">
+          <li>Settings</li>
+          <li>Support</li>
+          <li>Privacy</li>
+        </ul>
     </div>
-    <div class="header-bottom">
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+    <div class="dashboard-display">
+    
     </div>
-  </header>
+  </div>
 </body>
 </html>
