add cards and layout page positioning before finalizing content and styling heavily

--- a/index.html
+++ b/index.html
@@ -32,23 +32,52 @@
       </div>
     </header>
     <div class="sidebar">
-      <h2>Dashboard</h2>
-        <ul class="sidebar-1">
-          <li>Home</li>
-          <li>Profile</li>
-          <li>Messages</li>
-          <li>History</li>
-          <li>Tasks</li>
-          <li>Communities</li>
-        </ul>
-        <ul class="sidebar-2">
-          <li>Settings</li>
-          <li>Support</li>
-          <li>Privacy</li>
-        </ul>
+      <h2 class="dasboard=header">Dashboard</h2>
+      <ul class="sidebar-1">
+        <li>Home</li>
+        <li>Profile</li>
+        <li>Messages</li>
+        <li>History</li>
+        <li>Tasks</li>
+        <li>Communities</li>
+      </ul>
+      <ul class="sidebar-2">
+        <li>Settings</li>
+        <li>Support</li>
+        <li>Privacy</li>
+      </ul>
     </div>
     <div class="dashboard-display">
-    
+      <div class="card-container">
+        <div class="card">
+          <p class="card-title">Super Cool Project</p>
+          Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.
+        </div>
+        <div class="card">
+          <p class="card-title">Less Cool Project</p>
+          Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien 
+          et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus. 
+        </div>
+        <div class="card">
+          <p class="card-title">Impossible App</p>
+          In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id. 
+        </div>
+        <div class="card">
+          <p class="card-title">Easy Peasy App</p>
+          Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur 
+          dignissim nisi in tortor commodo, ac bibendum magna tincidunt. 
+        </div>
+        <div class="card">
+          <p class="card-title">Ad Blocker</p>
+          Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed 
+          malesuada eros. 
+        </div>
+        <div class="card">
+          <p class="card-title">Money Maker</p>
+          Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus 
+          sit amet ex. Pellentesque mollis nec sem vel aliquam. 
+        </div>
+      </div>
     </div>
   </div>
 </body>
