--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
           sit amet ex. Pellentesque mollis nec sem vel aliquam. 
         </div>
       </div>
+      <div class="side-section">
+        <div class="announcements">
+        </div>
+        <div class="trending">
+
+        </div>
+      </div>
     </div>
   </div>
 </body>
