rework structure of projects grid for more consistent display when resizing window

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <header>
-      <div class="header-top">
+      <!--<div class="header-top">
         <div class="header-top-1">
           <p class="search-bar">search bar</p>
         </div>
@@ -29,10 +29,10 @@
           <button>Upload</button>
           <button>Share</button>
         </div>
-      </div>
+      </div> -->
     </header>
     <div class="sidebar">
-      <h2 class="dasboard=header">Dashboard</h2>
+      <div class="dashboard-heading">Dashboard</div>
       <ul class="sidebar-1">
         <li>Home</li>
         <li>Profile</li>
@@ -48,41 +48,70 @@
       </ul>
     </div>
     <div class="dashboard-display">
-      <div class="card-container">
-        <div class="card">
-          <p class="card-title">Super Cool Project</p>
-          Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.
-        </div>
-        <div class="card">
-          <p class="card-title">Less Cool Project</p>
-          Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien 
-          et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus. 
-        </div>
-        <div class="card">
-          <p class="card-title">Impossible App</p>
-          In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id. 
-        </div>
-        <div class="card">
-          <p class="card-title">Easy Peasy App</p>
-          Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur 
-          dignissim nisi in tortor commodo, ac bibendum magna tincidunt. 
-        </div>
-        <div class="card">
-          <p class="card-title">Ad Blocker</p>
-          Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed 
-          malesuada eros. 
-        </div>
-        <div class="card">
-          <p class="card-title">Money Maker</p>
-          Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus 
-          sit amet ex. Pellentesque mollis nec sem vel aliquam. 
+      <div class="projects-container">
+        <h2 class="projects-heading">Your Projects</h2>
+        <div class="card-container">
+          <div class="card">
+            <div class="card-top">
+              <p class="card-title">Super Cool Project</p>
+              Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.
+            </div>
+            <div class="card-bottom">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-top">
+              <p class="card-title">Less Cool Project</p>
+              Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien
+              et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.
+            </div>
+            <div class="card-bottom">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-top">
+              <p class="card-title">Impossible App</p>
+              In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.
+            </div>
+            <div class="card-bottom">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-top">
+              <p class="card-title">Easy Peasy App</p>
+              Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur
+              dignissim nisi in tortor commodo, ac bibendum magna tincidunt.
+            </div>
+            <div class="card-bottom">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-top">
+              <p class="card-title">Ad Blocker</p>
+              Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed
+              malesuada eros.
+            </div>
+            <div class="card-bottom">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-top">
+              <p class="card-title">Money Maker</p>
+              Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus
+              sit amet ex. Pellentesque mollis nec sem vel aliquam.
+            </div>
+            <div class="card-bottom">
+            </div>
+          </div>
         </div>
       </div>
       <div class="side-section">
+        <h2 class="announcements-heading">Announcements</h2>
         <div class="announcements">
-        </div>
+ 
+        </div>   
+        <h2 class="trending-heading">Trending</h2>    
         <div class="trending">
-
         </div>
       </div>
     </div>
