redo header to make it simpler

--- a/index.html
+++ b/index.html
@@ -8,28 +8,24 @@
   </head>
 <body>
   <div class="container">
-    <header>
-      <!--<div class="header-top">
-        <div class="header-top-1">
-          <p class="search-bar">search bar</p>
-        </div>
-        <div class="header-top-2">
-          <p class="notification">notification icon</p>
-          <p class="profile-image">user avatar</p>
-          <p class="user-name">user name</p>
-        </div>
+    <header>  
+      <div class="search-bar-container">
+        <p class="search-bar">search bar</p>
       </div>
-      <div class="header-bottom">
-        <div class="header-bottom-1">
-          <p>user image</p>
-          <p>user name</p>
-        </div>
-        <div class="header-bottom-2">
-          <button>New</button>
-          <button>Upload</button>
-          <button>Share</button>
-        </div>
-      </div> -->
+      <div class="header-top-right">
+        <p class="notification">notification</p>
+        <p class="profile-image">user avatar</p>
+        <p class="user-name">user name</p>
+      </div>
+      <div class="header-bottom-left">
+        <p>user image</p>
+        <p>user name</p>
+      </div>
+      <div class="button-container">
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button>
+      </div>
     </header>
     <div class="sidebar">
       <div class="dashboard-heading">Dashboard</div>
