add svgs to sidebar, restyle middle section

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
       </div>
     </header>
     <div class="sidebar">
-      <div class="dashboard-heading">Dashboard</div>
+      <div class="dashboard-heading"><img src=images/dashboard.svg class="dashboard-image" alt="icon">Dashboard</div>
       <ul class="sidebar-1">
-        <li>Home</li>
-        <li>Profile</li>
-        <li>Messages</li>
-        <li>History</li>
-        <li>Tasks</li>
-        <li>Communities</li>
+        <li><img src=images/home.svg class="sidebar-image" alt="icon">Home</li>
+        <li><img src=images/profile.svg class="sidebar-image" alt="icon">Profile</li>
+        <li><img src=images/messages.svg class="sidebar-image" alt="icon">Messages</li>
+        <li><img src=images/history.svg class="sidebar-image" alt="icon">History</li>
+        <li><img src=images/tasks.svg class="sidebar-image" alt="icon">Tasks</li>
+        <li><img src=images/communities.svg class="sidebar-image" alt="icon">Communities</li>
       </ul>
       <ul class="sidebar-2">
-        <li>Settings</li>
-        <li>Support</li>
-        <li>Privacy</li>
+        <li><img src=images/settings.svg class="sidebar-image" alt="icon">Settings</li>
+        <li><img src=images/support.svg class="sidebar-image" alt="icon">Support</li>
+        <li><img src=images/privacy.svg class="sidebar-image" alt="icon">Privacy</li>
       </ul>
     </div>
     <div class="dashboard-display">
@@ -53,6 +53,9 @@
               Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.
             </div>
             <div class="card-bottom">
+              <span class="icon">icon</span>
+              <span class="icon">icon</span>
+              <span class="icon">icon</span>
             </div>
           </div>
           <div class="card">
@@ -62,6 +65,9 @@
               et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.
             </div>
             <div class="card-bottom">
+              <span class="icon">icon</span>
+              <span class="icon">icon</span>
+              <span class="icon">icon</span>
             </div>
           </div>
           <div class="card">
@@ -70,6 +76,9 @@
               In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.
             </div>
             <div class="card-bottom">
+              <span class="icon">icon</span>
+              <span class="icon">icon</span>
+              <span class="icon">icon</span>
             </div>
           </div>
           <div class="card">
@@ -79,6 +88,9 @@
               dignissim nisi in tortor commodo, ac bibendum magna tincidunt.
             </div>
             <div class="card-bottom">
+              <span class="icon">icon</span>
+              <span class="icon">icon</span>
+              <span class="icon">icon</span>
             </div>
           </div>
           <div class="card">
@@ -88,6 +100,9 @@
               malesuada eros.
             </div>
             <div class="card-bottom">
+              <span class="icon">icon</span>
+              <span class="icon">icon</span>
+              <span class="icon">icon</span>
             </div>
           </div>
           <div class="card">
@@ -97,6 +112,9 @@
               sit amet ex. Pellentesque mollis nec sem vel aliquam.
             </div>
             <div class="card-bottom">
+              <span class="icon">icon</span>
+              <span class="icon">icon</span>
+              <span class="icon">icon</span>
             </div>
           </div>
         </div>
@@ -104,10 +122,54 @@
       <div class="side-section">
         <h2 class="announcements-heading">Announcements</h2>
         <div class="announcements">
- 
+          <div class="announcements-section">
+            <p class="announcement-header">section 1</p>
+             Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+             Incidunt molestiae pariatur esse repellat corporis amet?
+          </div>
+          <hr>
+          <div class="announcements-section">
+            <p class="announcement-header">section 2</p>
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Doloremque, exercitationem numquam minus sapiente tenetur consequatur?
+          </div>
+          <hr>
+          <div class="announcements-section">
+            <p class="announcement-header">section 3</p>
+             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Et saepe facere mollitia ipsa perferendis expedita.
+          </div>
         </div>   
         <h2 class="trending-heading">Trending</h2>    
         <div class="trending">
+          <div class="trending-section">
+            <div class="trending-photo">image</div>
+              <div class="trending-user">
+                <p>username</p>
+                <p>description</p>
+              </div>
+          </div>
+          <div class="trending-section">
+            <div class="trending-photo">image</div>
+            <div class="trending-user">
+              <p>username</p>
+              <p>description</p>
+            </div>
+          </div>
+          <div class="trending-section">
+            <div class="trending-photo">image</div>
+            <div class="trending-user">
+              <p>username</p>
+              <p>description</p>
+            </div>
+          </div>
+          <div class="trending-section">
+            <div class="trending-photo">image</div>
+            <div class="trending-user">
+              <p>username</p>
+              <p>description</p>
+            </div>
+         </div>
         </div>
       </div>
     </div>
