add images and finish styling for now

--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
   <div class="container">
     <header>  
       <div class="search-bar-container">
-        <p class="search-bar">search bar</p>
+        <span class="search-bar"><img src="images/search.svg" class="search-icon" alt="search icon"></span>
+        <input type="text">
       </div>
       <div class="header-top-right">
-        <p class="notification">notification</p>
-        <p class="profile-image">user avatar</p>
-        <p class="user-name">user name</p>
+        <p class="notification"><img src="images/notification.svg" class="notification-icon" alt="notification icon"></p>
+        <p class="profile-image"><img src="images/cat2.png" alt="cat icon"  class="cat-icon-small"></p>
+        <p class="user-name">Morgan</p>
       </div>
       <div class="header-bottom-left">
-        <p>user image</p>
-        <p>user name</p>
+        <p><img src="images/cat.png" alt="cat icon"  class="cat-icon"></p>
+        <div>
+          <p>Hi there,</p>
+          <p>Morgan Oakley (@morgan)</p>
+        </div>
       </div>
       <div class="button-container">
         <button>New</button>
@@ -53,9 +57,9 @@
               Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.
             </div>
             <div class="card-bottom">
-              <span class="icon">icon</span>
-              <span class="icon">icon</span>
-              <span class="icon">icon</span>
+              <span class="icon"><img src=images/star.svg class="card-icon" alt="icon"></span>
+              <span class="icon"><img src=images/eye.svg class="card-icon" alt="icon"></span>
+              <span class="icon"><img src=images/fork.svg class="card-icon" alt="icon"></span>
             </div>
           </div>
           <div class="card">
@@ -65,9 +69,9 @@
               et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.
             </div>
             <div class="card-bottom">
-              <span class="icon">icon</span>
-              <span class="icon">icon</span>
-              <span class="icon">icon</span>
+              <span class="icon"><img src=images/star.svg class="card-icon" alt="icon"></span>
+              <span class="icon"><img src=images/eye.svg class="card-icon" alt="icon"></span>
+              <span class="icon"><img src=images/fork.svg class="card-icon" alt="icon"></span>
             </div>
           </div>
           <div class="card">
@@ -76,9 +80,9 @@
               In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.
             </div>
             <div class="card-bottom">
-              <span class="icon">icon</span>
-              <span class="icon">icon</span>
-              <span class="icon">icon</span>
+              <span class="icon"><img src=images/star.svg class="card-icon" alt="icon"></span>
+              <span class="icon"><img src=images/eye.svg class="card-icon" alt="icon"></span>
+              <span class="icon"><img src=images/fork.svg class="card-icon" alt="icon"></span>
             </div>
           </div>
           <div class="card">
@@ -88,9 +92,9 @@
               dignissim nisi in tortor commodo, ac bibendum magna tincidunt.
             </div>
             <div class="card-bottom">
-              <span class="icon">icon</span>
-              <span class="icon">icon</span>
-              <span class="icon">icon</span>
+              <span class="icon"><img src=images/star.svg class="card-icon" alt="icon"></span>
+              <span class="icon"><img src=images/eye.svg class="card-icon" alt="icon"></span>
+              <span class="icon"><img src=images/fork.svg class="card-icon" alt="icon"></span>
             </div>
           </div>
           <div class="card">
@@ -100,9 +104,9 @@
               malesuada eros.
             </div>
             <div class="card-bottom">
-              <span class="icon">icon</span>
-              <span class="icon">icon</span>
-              <span class="icon">icon</span>
+              <span class="icon"><img src=images/star.svg class="card-icon" alt="icon"></span>
+              <span class="icon"><img src=images/eye.svg class="card-icon" alt="icon"></span>
+              <span class="icon"><img src=images/fork.svg class="card-icon" alt="icon"></span>
             </div>
           </div>
           <div class="card">
@@ -112,9 +116,9 @@
               sit amet ex. Pellentesque mollis nec sem vel aliquam.
             </div>
             <div class="card-bottom">
-              <span class="icon">icon</span>
-              <span class="icon">icon</span>
-              <span class="icon">icon</span>
+              <span class="icon"><img src=images/star.svg class="card-icon" alt="icon"></span>
+              <span class="icon"><img src=images/eye.svg class="card-icon" alt="icon"></span>
+              <span class="icon"><img src=images/fork.svg class="card-icon" alt="icon"></span>
             </div>
           </div>
         </div>
@@ -123,19 +127,19 @@
         <h2 class="announcements-heading">Announcements</h2>
         <div class="announcements">
           <div class="announcements-section">
-            <p class="announcement-header">section 1</p>
+            <p class="announcement-header">Site Maintenance</p>
              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
              Incidunt molestiae pariatur esse repellat corporis amet?
           </div>
           <hr>
           <div class="announcements-section">
-            <p class="announcement-header">section 2</p>
+            <p class="announcement-header">Community Share Day</p>
              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
              Doloremque, exercitationem numquam minus sapiente tenetur consequatur?
           </div>
           <hr>
           <div class="announcements-section">
-            <p class="announcement-header">section 3</p>
+            <p class="announcement-header">Updated Privacy Policy</p>
              Lorem ipsum dolor sit amet consectetur adipisicing elit.
              Et saepe facere mollitia ipsa perferendis expedita.
           </div>
@@ -143,31 +147,31 @@
         <h2 class="trending-heading">Trending</h2>    
         <div class="trending">
           <div class="trending-section">
-            <div class="trending-photo">image</div>
-              <div class="trending-user">
-                <p>username</p>
-                <p>description</p>
-              </div>
-          </div>
-          <div class="trending-section">
-            <div class="trending-photo">image</div>
+            <img src=images/dog.png class="trending-image" alt="icon">
             <div class="trending-user">
-              <p>username</p>
-              <p>description</p>
+              <p>@tegan</p>
+              <p>World Peace Builder</p>
             </div>
           </div>
           <div class="trending-section">
-            <div class="trending-photo">image</div>
+            <img src=images/cat3.png class="trending-image" alt="icon">
             <div class="trending-user">
-              <p>username</p>
-              <p>description</p>
+              <p>@morgan</p>
+              <p>Super Cool Project</p>
             </div>
           </div>
           <div class="trending-section">
-            <div class="trending-photo">image</div>
+            <img src=images/turtle.png class="trending-image" alt="icon">
             <div class="trending-user">
-              <p>username</p>
-              <p>description</p>
+              <p>@kendall</p>
+              <p>Life Changing App</p>
+            </div>
+          </div>
+          <div class="trending-section">
+            <img src=images/lizard.png class="trending-image" alt="icon">
+            <div class="trending-user">
+              <p>@alex</p>
+              <p>No Traffic Maker</p>
             </div>
          </div>
         </div>
